<resources>
    <string name="app_name">SteganoApp</string>
    <string name="loadImageButton">Załaduj obraz (Nośnik)</string>
    <string name="loadImageButtonMessage">Załaduj obraz (Wiadomość)</string>
    <string name="pathEmpty">Ścieżka:</string>
    <string name="fileMissing">Brak pliku!</string>
    <string name="fileLoaded">Plik wczytano poprawnie!</string>
    <string name="fileNotLoaded">Błędny format - nie można wczytać pliku!</string>
    <string name="maxMessageSize">Maksymalny rozmiar wiadomości:</string>
    <string name="messageSizeTooLarge">Wiadomość jest zbyt długa!</string>
    <string name="messageContent">Treść wiadomości:</string>
    <string name="encode">Zakoduj</string>
    <string name="decode">Odkoduj</string>
    <string name="switchButtonOff">Kodowanie</string>
    <string name="switchButtonOn">Dekodowanie</string>
    <string name="methodTextView">Metoda: </string>
    <string name="imageMessageTextView">Wiadomość: </string>
    <string-array name="methods_array">
        <item>LSB - tekst</item>
        <item>LSB - obraz</item>
    </string-array>
</resources>